# TicketHare

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  CMakeListsALLSRCCPP.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/io/chizi/tickethare/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/chizi/tickethare/: LPScanActivity.java  MainActivity.java  MyFragmentPagerAdapter.java  RuntimePermissionsActivity.java  SplashScreen.java  TicketApplication.java
app/src/main/java/io/chizi/tickethare/acquire/: AcquireFragment.java  DeviceListActivity.java  PlateRecognizer.java  PreviewActivity.java
app/src/main/java/io/chizi/tickethare/database/: DBProvider.java  DatabaseFragment.java  DetailsActivity.java  DetailsFragment.java  FragmentLayout.java  TitlesFragment.java
app/src/main/java/io/chizi/tickethare/loadmap/: LoadmapFragment.java
app/src/main/java/io/chizi/tickethare/login/: ChangePasswordActivity.java  LoginActivity.java  SignupActivity.java  UpdateProfileActivity.java
app/src/main/java/io/chizi/tickethare/pager/: MyFragmentPagerAdapter.java  SlidingTabLayout.java  SlidingTabStrip.java
app/src/main/java/io/chizi/tickethare/util/: AppConstants.java  BitmapUtil.java  ColorSpinnerAdapter.java  DateUtil.java  FileUtil.java  GrpcRunnable.java  MRAssetUtil.java  MRCarUtil.java  MRMediaFileUtil.java
app/src/main/jni/: Android.mk  Application.mk  main.cpp  marcar.cpp  mrcar.cpp  util.h
app/src/main/jni/include/: accuracy.hpp
app/src/main/jni/include/easypr/: config.h
app/src/main/jni/src/core/: chars_identify.cpp  core_func.cpp  plate_detect.cpp  plate_judge.cpp  plate_locate.cpp  plate_recognize.cpp
app/src/main/jni/src/preprocess/: gdts.cpp
app/src/main/proto/: ticket.proto
app/src/main/res/layout/: activity_change_password.xml  activity_devicelist.xml  activity_login.xml  activity_lpscan.xml  activity_main.xml  activity_preview.xml  activity_signup.xml  activity_splash_screen.xml  fragment_acquire.xml  fragment_data.xml  fragment_details.xml  fragment_loadmap.xml  fragment_titles.xml  image_details.xml  offline_localmap_list.xml  police_details.xml  prompt_address.xml  prompt_license_color.xml  prompt_license_num.xml  prompt_ticket_id.xml  prompt_vehicle_color.xml  prompt_vehicle_type.xml  spinner_item.xml  submit_buttons.xml  ticket_details.xml
app/src/main/res/layout-land/: activity_change_password.xml  activity_login.xml  activity_preview.xml  activity_splash_screen.xml  fragment_acquire.xml  fragment_data.xml  fragment_loadmap.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/io/chizi/tickethare/: ExampleUnitTest.java
cam2/: build.gradle
cam2/src/main/java/com/commonsware/cwac/cam2/: AbstractCameraActivity.java  CameraActivity.java  CameraFragment.java  ConfirmationFragment.java
cam2/src/main/res/values/: colors.xml  strings.xml
cam2/src/main/res/values-zh/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle
